# xrumpp

./: .gitmodules  Cargo.toml  TODO.md
crates/libstrophe-sys/: Cargo.toml  build.rs
crates/libstrophe-sys/src/: bindings.rs  lib.rs
crates/libtiny_tui/: Cargo.toml
crates/libtiny_tui/src/: lib.rs
crates/libxrumpp_client/: Cargo.toml
crates/libxrumpp_client/src/: lib.rs
crates/tiny/: Cargo.toml
crates/tiny/src/: config.rs  main.rs  ui.rs  xmpp_conn.rs
