[workspace]
resolver = "2"
members = [
    "crates/libtiny_client",
    "crates/libtiny_common",
    "crates/libtiny_logger",
    "crates/libtiny_tui",
    "crates/libtiny_wire",
    "crates/term_input",
    "crates/term_input_macros",
    "crates/termbox",
    "crates/tiny",
    "crates/libxrumpp_client",
    "crates/libstrophe-sys"
]

[profile.release]
lto = true
codegen-units = 1
