[package]
name = "libxrumpp_client"
version = "0.1.0"
authors = ["Morgen Malinoski <morgenem@protonmail.com>"]
description = "An XMPP client library for xrumpp"
edition = "2021"

[dependencies]
#xmpp = { path="../externals/xmpp-rs/xmpp" }
tokio = { version = "1.17", default-features = false, features = ["net", "rt", "io-util", "macros", "sync"] }
tokio-stream = { version = "0.1" }
libstrophe-sys = {path="../libstrophe-sys"}
log = "0.4"